@@ -90,7 +90,8 @@ console_rel_CPPFLAGS = $(AM_CPPFLAGS) $(console_CPPFLAGS)
 console_rel_LDFLAGS = $(RTEMS_RELLDFLAGS)
 
 #irq
-include_bsp_HEADERS += irq/irq.h ../shared/irq/irq_supp.h
+include_bsp_HEADERS += irq/irq.h \
+	../../../libcpu/@RTEMS_CPU@/@exceptions@/bspsupport/irq_supp.h
 
 noinst_PROGRAMS += irq.rel
 irq_rel_SOURCES = irq/irq_init.c \
