@@ -40,9 +40,9 @@ extern int _BSP_vme_bridge_irq;
 extern int BSP_VMEInit();
 extern int BSP_VMEIrqMgrInstall();
 
-#define BSP_VME_UNIVERSE_INSTALL_IRQ_MGR		\
+#define BSP_VME_UNIVERSE_INSTALL_IRQ_MGR(err)	\
 	do {										\
-		vmeUniverseInstallIrqMgr(				\
+		err = vmeUniverseInstallIrqMgr(			\
 			4, BSP_PCI_IRQ_LOWEST_OFFSET + 1,	\
 			5, BSP_PCI_IRQ_LOWEST_OFFSET + 8);	\
 	} while (0)
